--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Music Player</title>
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
+
 <body>
-    
+    <div class="music-player">
+        <div class="cover">
+            <img src="https://via.placeholder.com/300x300.png?text=Album+Art" alt="Album Cover" />
+        </div>
+        <div class="info">
+            <h2 class="title">Song Title</h2>
+            <h3 class="artist">Artist Name</h3>
+        </div>
+        <div class="progress-container">
+            <div class="progress">
+                <div class="progress-bar"></div>
+            </div>
+            <div class="time">
+                <span>1:15</span>
+                <span>3:45</span>
+            </div>
+        </div>
+        <div class="controls">
+            <button class="prev">⏮</button>
+            <button class="play">▶️</button>
+            <button class="next">⏭</button>
+        </div>
+    </div>
 </body>
+
 </html>
