handle when click song in playlist

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Header -->
             <header>
                 <h4>Now playing:</h4>
-                <h2>String 57th & 9th</h2>
+                <h2>Song name</h2>
             </header>
 
             <!-- CD -->
