--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
                 <div class="cd-thumb"
                     style="background-image: url('https://i.ytimg.com/vi/jTLhQf5KJSc/maxresdefault.jpg')">
                 </div>
+
+                <div class="copyright">
+                    <p>made by <span class="author">nvdeekay</span></p>
+                </div>
             </div>
+
 
             <!-- Control -->
             <div class="control">
