--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
             <!-- CD -->
             <div class="cd">
-                <div class="cd-thumb"
-                    style="background-image: url('https://i.ytimg.com/vi/jTLhQf5KJSc/maxresdefault.jpg')">
+                <div class="cd-thumb">
                 </div>
 
                 <div class="copyright">
